# autoignition

./: .gitignore  CMakeLists.txt  README.md  auto_ignition.sln
auto_ignition_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MyExecutable_1.vcxproj  MyExecutable_1.vcxproj.filters  MyProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
auto_ignition_build/MyExecutable_1.dir/Debug/: MyExecutable_1.exe.recipe
auto_ignition_build/MyExecutable_1.dir/Release/: MyExecutable_1.exe.recipe
autoignition/: auto_ignition.cpp  auto_ignition.vcxproj  auto_ignition.vcxproj.filters  concentration.cpp  constants.cpp  functions_sundials.cpp  functions_sundials.h  thermodynamic.cpp
autoignition/x64/Debug/: auto_ignition.exe.recipe  vc143.idb
autoignition/x64/Release/: auto_ignition.exe.recipe  auto_ignition.ipdb
sundials_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SUNDIALS.sln  SUNDIALSConfig.cmake  SUNDIALSTargets.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test_install.vcxproj  test_install.vcxproj.filters  test_install_all.vcxproj  test_install_all.vcxproj.filters
sundials_build/POSIX_TIMER_TEST/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ltest.sln  ltest.vcxproj  ltest.vcxproj.filters
sundials_build/examples/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
sundials_build/examples/arkode/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
sundials_build/examples/cvode/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
sundials_build/examples/cvodes/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
sundials_build/examples/ida/: CTestTestfile.cmake  INSTALL.vcxproj  (+4 more)
sundials_build/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
(+3310 files in other folders)
